separate modals different files

--- a/modals/ConfirmationModal.html
+++ b/modals/ConfirmationModal.html
@@ -1,4 +1,5 @@
-<div ng-controller="roomController" class="modal fade" id="finalConfirmModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<!--  Final confirmation Modal -->
+<div ng-controller="roomController" >
     <div class="modal-dialog" role="document">
         <div class="modal-content" id="printModalContent">
             <div class="modal-header">
