--- a/modals/upgradeOptionModal.html
+++ b/modals/upgradeOptionModal.html
@@ -1,4 +1,5 @@
-<div ng-controller="roomController" class="modal fade upgradeModal" id="confirmationModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+
+<div ng-controller="roomController" >
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
