--- a/modals/upgradeOptionModal.html
+++ b/modals/upgradeOptionModal.html
@@ -9,25 +9,34 @@
             <div class="modal-body">
                 <img class="col-sm-3 col-md-3" src="{{bookingInfo.roomInfo.image_url}}" alt="" />
                 <div class="col-sm-4 col-md-4">
+                    <p>
+                      selectedCurrencyRate
+                    </p>
                     <p>Guest Name: </p>
                     <p>Room Type: </p>
                     <p>Check In: </p>
                     <p>Check Out: </p>
                     <p ng-if="bookingInfo.ChampagneStrawberries.room_price">Champagne&Strawberries:</p>
-                    <p >Total Price: </p>
+                    <p >Room Price: </p>
                 </div>
                 <div class="col-sm-5 col-md-5">
                     <!-- Display booking information guest name, room type, price-->
+                    <p>
+                      {{  chooseCurrency }}
+                    </p>
                     <p>{{ bookingInfo.guestInfo.first_name | uppercase }} {{ bookingInfo.guestInfo.last_name | uppercase }}</p>
                     <p>{{ bookingInfo.roomInfo.short_desc }}</p>
                     <p>{{ bookingInfo.guestInfo.checkInDate | date }}</p>
                     <p>{{ bookingInfo.guestInfo.checkOutDate| date }}</p>
                     <p ng-if="bookingInfo.ChampagneStrawberries.room_price">
-                      <span ng-hide="fromType">{{ bookingInfo.ChampagneStrawberries.room_price }} (USD)<a  href="" style="color:red" class="close" ng-click="remove()">x</a></span>
-                      <span ng-show="fromType">{{ bookingInfo.ChampagneStrawberries.room_price * fromType | number: 2}} ({{currency}})<a  href="" style="color:red" class="close" ng-click="remove()">x</a></span>
+                      <span >{{ chooseCurrency[1] * bookingInfo.ChampagneStrawberries.room_price | number: 2}} ({{chooseCurrency[0] }})<a  href="" style="color:red" class="close" ng-click="remove()">x</a></span>
                     </p>
-                    <p ng-hide="fromType">{{ bookingInfo.roomInfo.room_price * ( (bookingInfo.guestInfo.checkOutDate - bookingInfo.guestInfo.checkInDate)/86400000 ) + bookingInfo.ChampagneStrawberries.room_price }} (USD) </p>
-                    <p ng-show="fromType">{{ fromType * (bookingInfo.roomInfo.room_price * ( (bookingInfo.guestInfo.checkOutDate - bookingInfo.guestInfo.checkInDate)/86400000 ) + bookingInfo.ChampagneStrawberries.room_price ) | number: 2}} ({{ currency }})  </p>
+
+                    <p >{{ chooseCurrency[1] * (bookingInfo.roomInfo.room_price * stayInDays + bookingInfo.ChampagneStrawberries.room_price ) | number: 2}} ({{ chooseCurrency[0] }})  </p>
+                    <p>
+                      YYYY {{ bookingInfo.guestInfo.total_price }}
+                    </p>
+
                 </div>
 
 <!--  upgrade options-->
